Align title left. https://github.com/srophe/e-gedsh/issues/172

--- a/srophe-app/resources/css/main.css
+++ b/srophe-app/resources/css/main.css
@@ -122,9 +122,8 @@ body {font-family: times, serif; background-color:#333;}
     right:18px;
     height:75px;
     width:100%;
-    padding-right:2em;
-    text-align:right;
-    text-indent:8%;
+    text-indent:1em;
+    text-align:left;
     font:1.95em Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight:400;
     /*
